--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -20,9 +20,11 @@ $tips_bg: #393939;
 $active_key: #1f1f1f;
 $modal_layout: rgba(0, 0, 0, 0.6);
 $modal_bg: #131313;
-$form_border: #101010;
-//sizes
+$form_bg: #1f1f1f;
+$form_border: #7e7e7e;
+$auth_btn_bg_color: #1f1f1f;
 
+//sizes
 $min_mobile: 360px;
 $min_tablet: 768px;
 $big_pc: 1440px;
