--- a/components/Cabinet/Authentication/ResetPassword/ResetPassword.module.scss
+++ b/components/Cabinet/Authentication/ResetPassword/ResetPassword.module.scss
@@ -6,33 +6,28 @@
   height: 100%;
   justify-content: center;
   align-items: center;
+  @media all and (max-width: $min_tablet) {
+    width: 328px;
+  }
 }
 
 .form {
-  position: relative;
-  background-color: #fdfdfd;
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+  background-color: $form_bg;
   border-radius: 30px;
-  padding: 40px 24px;
-  z-index: 100;
+  padding: 24px 16px;
+
   @media all and (min-width: $min_tablet) {
     width: 458px;
-  }
-}
-
-.title {
-  @include fontRegular(18px, 600, 25.2px, $third_text_color, center);
-  margin-bottom: 8px;
-  @media all and (min-width: $min_tablet) {
-    font-size: 20px;
-  }
-  @media all and (min-width: $min_desktop) {
-    font-size: 28px;
+    padding: 40px 24px;
+    gap: 23px;
   }
 }
 
 .about_reset {
-  @include fontRegular(10px, 600, 14px, $third_text_color, center);
-  margin-bottom: 20px;
+  @include fontRegular(14px, 400, 19.6px, $main_text_color, center);
   @media all and (min-width: $min_tablet) {
     font-size: 14px;
     text-wrap: balance;
@@ -43,10 +38,6 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  margin-bottom: 20px;
-  @media all and (min-width: $min_desktop) {
-    font-size: 20px;
-  }
 }
 
 .label {
@@ -54,36 +45,22 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  @media all and (min-width: $min_desktop) {
-    font-size: 12px;
-  }
 }
 
 .label_text {
-  @include fontRegular(10px, 400, 10px, $third_text_color);
-  @media all and (min-width: $min_tablet) {
-    font-size: 14px;
-  }
-  @media all and (min-width: $min_desktop) {
-  }
+  @include fontRegular(12px, 400, 12px);
 }
 
 .input {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 52px;
-  @include fontRegular(14px, 400, 16px, $third_text_color);
-  padding: 10px 42px 10px 12px;
+  height: 48px;
+  @include fontRegular(14px, 400, 19.6px);
+  padding: 19px 42px 19px 16px;
   border: 1px solid $form_border;
   border-radius: 30px;
-  @media all and (min-width: $min_tablet) {
-    font-size: 16px;
-    height: 56px;
-    padding: 10px 18px;
-  }
-  @media all and (min-width: $min_desktop) {
-  }
+  background-color: transparent;
 }
 
 .button {
@@ -94,45 +71,39 @@
   height: 52px;
   width: 100%;
   border-radius: 30px;
-  background: $main_bg;
-  @include fontRegular(14px, 400, 14px);
-  margin-bottom: 20px;
+  background: $buttons_color;
+  @include fontRegular(16px, 600, 16px, $third_text_color);
   transition: all 250ms ease-in;
   @media (hover: hover) {
     &:is(:hover, :focus) {
       background-color: $card_bg;
       border: 1px solid $form_border;
-      color: $third_text_color;
     }
   }
   @media (hover: none) {
     &:is(:active, :focus) {
       background-color: $card_bg;
       border: 1px solid $form_border;
-      color: $third_text_color;
     }
-  }
-  @media all and (min-width: $min_tablet) {
-    font-size: 16px;
-    height: 56px;
-  }
-  @media all and (min-width: $min_desktop) {
-    font-size: 18px;
-    height: 60px;
   }
 }
 
 .link_to_registration {
-  @include fontRegular(12px, 400, 12px, $third_text_color, center);
-  display: flex;
-  justify-content: space-evenly;
+  @include fontRegular(16px, 400, 22.4px, $main_text_color, center);
   & > a {
-    text-decoration: underline;
-  }
-  @media all and (min-width: $min_tablet) {
-    font-size: 14px;
-  }
-  @media all and (min-width: $min_desktop) {
-    font-size: 16px;
+    color: $seconds_text_color;
+    transition: all 250ms ease-in;
+    @media all and (min-width: $min_tablet) {
+      @media (hover: hover) {
+        &:is(:hover, :focus) {
+          color: $main_text_color;
+        }
+      }
+      @media (hover: none) {
+        &:is(:active, :focus) {
+          color: $main_text_color;
+        }
+      }
+    }
   }
 }
