--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -24,6 +24,13 @@ $form_bg: #1f1f1f;
 $form_border: #7e7e7e;
 $auth_btn_bg_color: #1f1f1f;
 
+//platform_colors
+$p_button_bg: #4880ff;
+$p_main_bg: #fdfdfd; //--gray-100
+$p_second_text_color: #7e7e7e; //--gray-700
+$p_third_text_color: #fdfdfd;
+$p_border: #e8e8e8; //--gray-200
+
 //sizes
 $min_mobile: 360px;
 $min_tablet: 768px;
