added admin meditaion page

--- a/app/[locale]/(platform)/globals.scss
+++ b/app/[locale]/(platform)/globals.scss
@@ -6,3 +6,10 @@ body {
   color: $third_text_color;
   background-color: $section_color;
 }
+
+ul,
+ol {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
