--- a/app/[locale]/(platform)/cabinet/dashboard/admin/products/meditations/add/add_meditation_page.module.scss
+++ b/app/[locale]/(platform)/cabinet/dashboard/admin/products/meditations/add/add_meditation_page.module.scss
@@ -1,11 +1,12 @@
 @import '/styles/main.scss';
 
-.main {
+.wrapper {
   display: flex;
   flex-direction: column;
-  gap: 24px;
   background-color: $p_main_bg;
+  min-height: calc(100vh - 65px);
   @media all and (width >= $min_desktop) {
+    min-height: 100vh;
     width: 100%;
   }
 }
