--- a/components/Cabinet/DashBoard/ChangeColor/ChangeColor.module.scss
+++ b/components/Cabinet/DashBoard/ChangeColor/ChangeColor.module.scss
@@ -4,6 +4,7 @@
   max-width: 100vw;
   overflow-x: hidden;
   min-height: 100dvh;
+  background-color: #fff;
   @media all and (width >= $min_desktop) {
     display: flex;
   }
