--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -30,6 +30,7 @@ $p_main_bg: #fdfdfd; //--gray-100
 $p_second_text_color: #7e7e7e; //--gray-700
 $p_third_text_color: #fdfdfd;
 $p_border: #e8e8e8; //--gray-200
+$p_active_button: #2961e0;
 
 //sizes
 $min_mobile: 360px;
