added meditation and webinars page

--- a/components/Cabinet/DashBoard/Admin/Main/Products/Meditations/AddMeditation/categories.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Products/Meditations/AddMeditation/categories.scss
@@ -27,6 +27,7 @@
 
 .p-dropdown-label {
   @include fontRegular(14px, 400, 19.6px, $third_text_color);
+  color: $third_text_color !important;
 }
 
 .p-dropdown-item {
