--- a/components/Cabinet/DashBoard/Admin/Main/Products/Title/Title.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Products/Title/Title.module.scss
@@ -14,6 +14,7 @@
   @media all and (width >= $min_desktop) {
     border-bottom: 1px solid $p_border;
     height: 80px;
+    padding: 24px;
   }
 }
 
