--- a/components/Cabinet/DashBoard/Admin/Main/Products/Webinars/Filter/Filter.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Products/Webinars/Filter/Filter.module.scss
@@ -1,12 +1,14 @@
 @import '/styles/main.scss';
 
-.main {
+.list {
   display: flex;
   flex-direction: column;
-  gap: 24px;
-  background-color: $p_main_bg;
+  gap: 12px;
+  @media all and (width >= $min_tablet) {
+    flex-direction: row;
+    gap: 24px;
+  }
   @media all and (width >= $min_desktop) {
-    width: 100%;
-    height: 100vh;
+    gap: 40px;
   }
 }
