--- a/app/[locale]/(platform)/cabinet/dashboard/admin/products/guides-and-books/add/add_meditation_page.module.scss
+++ b/app/[locale]/(platform)/cabinet/dashboard/admin/products/guides-and-books/add/add_meditation_page.module.scss
@@ -1,12 +1,13 @@
 @import '/styles/main.scss';
 
 .wrapper {
-  padding: 0 16px;
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  background-color: $p_main_bg;
+  min-height: calc(100vh - 65px);
   @media all and (width >= $min_desktop) {
-    flex-grow: 1;
-    height: calc(100vh - (160px + 56px));
+    min-height: 100vh;
+    width: 100%;
+    overflow: auto;
   }
 }
