--- a/components/Cabinet/DashBoard/Admin/Main/Products/Meditations/MeditationsList/MeditationsList.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Products/Meditations/MeditationsList/MeditationsList.module.scss
@@ -15,6 +15,9 @@
       width: 2px;
     }
   }
+  @media all and (width >= $min_desktop) {
+    grid-template-columns: repeat(auto-fit, minmax(232px, 272px));
+  }
 }
 
 .item {
