--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -32,6 +32,8 @@ $p_third_text_color: #fdfdfd;
 $p_border: #e8e8e8; //--gray-200
 $p_active_button: #2961e0;
 $p_admin_main_bg: #f9f7f7;
+$p_nav_bg: #e3e3e3;
+$p_header_title_border: #6c6c6c;
 
 //sizes
 $min_mobile: 360px;
