--- a/components/Cabinet/DashBoard/Admin/Header/Menu/Menu.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Header/Menu/Menu.module.scss
@@ -4,7 +4,7 @@
   position: fixed;
   z-index: 9;
   inset: 0;
-  background: rgba(0, 0, 0, 0.3);;
+  background: rgba(16, 16, 16, 0.3);
 
   width: 100vw;
   height: 100vh;
@@ -28,7 +28,7 @@
   transform: translateX(100%);
   transition: all 250ms linear;
   height: 100dvh;
-  background-color: $p_main_bg;
+  background-color: $p_nav_bg;
   max-width: 400px;
   border-left: 1px solid #e8e8e8;
   z-index: 10;
@@ -58,8 +58,8 @@
   width: 40px;
   height: 40px;
   border-radius: 8px;
-  border: 1px solid #e8e8e8;
-  background-color: #f6f6f6;
+  border: 1px solid transparent;
+  background-color: transparent;
   transition: all 250ms ease-in;
   @media (hover: hover) {
     &:is(:hover, :focus) {
