adding course page

--- a/app/[locale]/globals.scss
+++ b/app/[locale]/globals.scss
@@ -1,3 +1,5 @@
+@import '/styles/main.scss';
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -52,6 +54,17 @@ button {
   border: none;
   background-color: transparent;
   cursor: pointer;
+  transition: all 250ms ease;
+  @media (hover: hover) {
+    &:is(:hover, :focus) {
+      scale: 1.05;
+    }
+  }
+  @media (hover: none) {
+    &:is(:active, :focus) {
+      scale: 1.05;
+    }
+  }
 }
 
 a {
