--- a/components/Cabinet/DashBoard/Admin/Main/Education/Head/Head.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Education/Head/Head.module.scss
@@ -11,9 +11,9 @@
   }
   @media all and (width >= $min_desktop) {
     background-color: $p_main_bg;
-    padding: 31px 24px;
-    border-bottom: 1px solid $p_header_title_border;
-    height: 80px;
+    padding: 24px;
+    border-bottom: 1px solid $p_border;
+    max-height: 80px;
   }
 }
 
@@ -22,9 +22,17 @@
   @media all and (width >= $min_tablet) {
     font-size: 24px;
   }
+  @media all and (width >= $min_desktop) {
+    & > span {
+      display: none;
+    }
+  }
 }
 
-.search_visibility {
+.actions_wrapper {
+  display: flex;
+  align-items: center;
+  gap: 16px;
   @media all and (width >= $min_desktop) {
     display: none;
   }
