--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -30,10 +30,13 @@ $p_main_bg: #fdfdfd; //--gray-100
 $p_second_text_color: #7e7e7e; //--gray-700
 $p_third_text_color: #fdfdfd;
 $p_border: #e8e8e8; //--gray-200
-$p_active_button: #2961e0;
+$p_active_button: #2961e0; //--blue
 $p_admin_main_bg: #f9f7f7;
 $p_nav_bg: #e3e3e3;
-$p_header_title_border: #6c6c6c;
+$p_header_title_border: #6c6c6c; //--dark-grey
+$p_btn_border: #e3e3e3;
+$p_separators: #c2c2c2; //--separators
+$light_table_header_gray: #e6e6e6; 
 
 //sizes
 $min_mobile: 360px;
