--- a/components/Cabinet/DashBoard/Admin/Main/Education/AddCourse/AddCourseForm/Form/FormParts/Type/Type.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Education/AddCourse/AddCourseForm/Form/FormParts/Type/Type.module.scss
@@ -93,6 +93,6 @@
   width: 40px;
   border: 1px solid $p_separators;
   border-radius: 8px;
-  padding: 12px;
+  padding-left: 6px;
   height: 24px;
 }
