--- a/components/Cabinet/DashBoard/Admin/Main/Education/TablesInfo/Table/table.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Education/TablesInfo/Table/table.scss
@@ -26,6 +26,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: $light_table_header_gray;
+  border-radius: 0px 0px 12px 12px;
+  overflow-x: scroll;
+  &::-webkit-scrollbar {
+    width: 2px;
+    height: 4px;
+  }
+
   @media all and (width >= $min_tablet) {
     justify-content: space-between;
     padding: 0 12px;
@@ -33,5 +41,6 @@
 }
 
 .p-column-title {
-  @include fontRegular(14px, 600, 20px, $third_text_color)
+  @include fontRegular(14px, 600, 20px, $third_text_color);
+  flex-grow: 1;
 }
