--- a/components/Cabinet/DashBoard/Admin/Main/Education/Lessons/AddLesson/Form/FormParts/ModulePeriod/ModulePeriod.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Education/Lessons/AddLesson/Form/FormParts/ModulePeriod/ModulePeriod.module.scss
@@ -63,4 +63,10 @@
   gap: 8px;
   justify-content: space-evenly;
   flex-grow: 1;
+  align-items: center;
+}
+
+.error {
+  border-color: red !important;
+  outline-color: red !important;
 }
