--- a/components/Cabinet/DashBoard/Admin/Main/Users/AddUser/FormSwitcher/ImportUsersForm/ImportUsersForm.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Users/AddUser/FormSwitcher/ImportUsersForm/ImportUsersForm.module.scss
@@ -7,10 +7,11 @@
   width: 400px;
 }
 
-.name_wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
+.info {
+  @include fontRegular(12px, 400, 16.8px, $p_second_text_color);
+  @media all and (width >= $min_tablet) {
+    font-size: 14px;
+  }
 }
 
 .label {
@@ -20,12 +21,13 @@
   @include fontRegular(14px, 600, 14px, $third_text_color);
 }
 
-.input {
+.textarea {
+  height: 100px;
   border: 1px solid $p_separators;
   border-radius: 8px;
-  padding: 24px 16px;
-  width: 100%;
-  height: 48px;
+  padding: 19px 16px;
+  resize: none;
+  overflow-y: hidden;
 }
 
 .ticks_wrapper {
