додано інфо про модуль якщо додаємо або редагуємо модуль

--- a/components/Cabinet/DashBoard/Admin/Main/Education/Lessons/LessonsTable/Table/Table.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Education/Lessons/LessonsTable/Table/Table.module.scss
@@ -25,3 +25,16 @@
   flex-grow: 1;
   background-color: $p_main_bg;
 }
+
+.name_table_link {
+  @media (hover: hover) {
+    &:is(:hover, :focus) {
+      text-decoration: underline;
+    }
+  }
+  @media (hover: none) {
+    &:is(:active, :focus) {
+      text-decoration: underline;
+    }
+  }
+}
