--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -36,7 +36,8 @@ $p_nav_bg: #e3e3e3; //--light-buttom-stroke-gray
 $p_header_title_border: #6c6c6c; //--dark-grey
 $p_btn_border: #e3e3e3;
 $p_separators: #c2c2c2; //--separators
-$light_table_header_gray: #e6e6e6; 
+$light_table_header_gray: #e6e6e6;
+$field_name_color: #454545; //--black-100
 
 //sizes
 $min_mobile: 360px;
