finished user page for admin

--- a/components/Cabinet/DashBoard/Admin/Main/Users/AddUser/FormSwitcher/ImportUsersForm/ImportUsersForm.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Users/AddUser/FormSwitcher/ImportUsersForm/ImportUsersForm.module.scss
@@ -25,7 +25,7 @@
   height: 100px;
   border: 1px solid $p_separators;
   border-radius: 8px;
-  padding: 19px 16px;
+  padding: 10px 16px 19px;
   resize: none;
   overflow-y: hidden;
 }
