--- a/components/Cabinet/DashBoard/Admin/Main/Users/UserList/UsersTable/OpenAccountProperties/OpenAccountProperties.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Users/UserList/UsersTable/OpenAccountProperties/OpenAccountProperties.module.scss
@@ -32,3 +32,15 @@
     }
   }
 }
+
+.banned {
+  color: red;
+}
+
+.verified {
+  color: rgb(13, 179, 63);
+}
+
+.to_delete {
+  text-decoration: line-through;
+}
