--- a/components/Cabinet/DashBoard/User/UserInfo/Achievement/SectionsTemplate/SectionsTemplate.module.scss
+++ b/components/Cabinet/DashBoard/User/UserInfo/Achievement/SectionsTemplate/SectionsTemplate.module.scss
@@ -3,5 +3,12 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  gap: 40px;
+  gap: 24px;
+}
+
+.title {
+  @include fontRegular(16px, 400, 25.28px, $main_text_color);
+  @media all and (width >= $min_tablet) {
+    font-size: 18px;
+  }
 }
