--- a/app/[locale]/(platform)/cabinet/dashboard/user/(user_info)/layout.module.scss
+++ b/app/[locale]/(platform)/cabinet/dashboard/user/(user_info)/layout.module.scss
@@ -25,6 +25,9 @@
 }
 
 .main {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
   overflow: auto;
   width: 100%;
   background-color: $card_bg_v2;
