--- a/app/[locale]/(platform)/cabinet/dashboard/user/(user_info)/layout.module.scss
+++ b/app/[locale]/(platform)/cabinet/dashboard/user/(user_info)/layout.module.scss
@@ -28,13 +28,22 @@
   display: flex;
   flex-direction: column;
   gap: 60px;
-  overflow: auto;
   width: 100%;
+  overflow: auto;
   background-color: $card_bg_v2;
   border-radius: 30px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);
   padding: 24px 24px 60px 24px;
   @media all and (width >= $min_tablet) {
     padding: 60px 24px 24px 24px;
+  }
+  @media all and (width >= $min_desktop) {
+    height: calc((100vh - 146px));
+    overflow-y: auto;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE 10+ */
+    &::-webkit-scrollbar {
+      display: none; /* Chrome, Safari, Opera */
+    }
   }
 }
