--- a/components/Cabinet/DashBoard/User/UserInfo/Achievement/CompletedCourses/CompletedCourses.module.scss
+++ b/components/Cabinet/DashBoard/User/UserInfo/Achievement/CompletedCourses/CompletedCourses.module.scss
@@ -20,6 +20,7 @@
   @media all and (width >= $min_desktop) {
     width: calc((100% - 20px) / 3);
     min-width: 233px;
+    max-width: 400px;
   }
 }
 
@@ -27,6 +28,7 @@
   display: flex;
   min-height: 105px;
   height: 100%;
+  max-height: 115px;
   gap: 16px;
   padding: 10px;
   background-color: $main_bg;
@@ -44,7 +46,7 @@
   height: 83px;
   @media all and (width >= $min_tablet) {
     width: 98px;
-    height: 92px;
+    height: 86px;
   }
 }
 
