--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -38,6 +38,7 @@ $p_btn_border: #e3e3e3;
 $p_separators: #c2c2c2; //--separators
 $light_table_header_gray: #e6e6e6;
 $field_name_color: #454545; //--black-100
+$dark_gold_light: #ecdbc3;
 
 //sizes
 $min_mobile: 360px;
