--- a/components/Cabinet/DashBoard/User/UserInfo/Personal/PersonalInfo/PersonalInfo.module.scss
+++ b/components/Cabinet/DashBoard/User/UserInfo/Personal/PersonalInfo/PersonalInfo.module.scss
@@ -7,6 +7,21 @@
   max-width: 400px;
   margin-inline: auto;
   width: 100%;
+  @media all and (width >= $min_tablet) {
+    max-width: 1100px;
+  }
+}
+
+.main_wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  @media all and (width >= $min_tablet) {
+    flex-direction: row;
+    justify-content: space-between;
+    flex-grow: 1;
+    width: 100%;
+  }
 }
 
 .name_last_name_wrapper {
@@ -60,4 +75,8 @@
     background-color: $dark_gold_light;
     color: $third_text_color;
   }
+}
+
+.error {
+  border-color: red;
 }
