закінченна стилізація сторінок

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -23,6 +23,7 @@ $modal_bg: #131313;
 $form_bg: #1f1f1f;
 $form_border: #7e7e7e;
 $auth_btn_bg_color: #1f1f1f;
+$dark_gold_dark: #af9369;
 
 //platform_colors
 $p_button_bg: #4880ff;
