--- a/components/Cabinet/DashBoard/Admin/Main/Users/UserDetails/UserCoursesInfo/UserCourseInfoTable/ActionsColumn/ActionsColumn.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Users/UserDetails/UserCoursesInfo/UserCourseInfoTable/ActionsColumn/ActionsColumn.module.scss
@@ -33,4 +33,12 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  width: 100%;
+  height: 30px;
+  @include fontRegular(16px, 400, 20px, $third_text_color);
+  & > svg {
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
+  }
 }
