--- a/components/Cabinet/DashBoard/User/UserInfo/Personal/PersonalInfo/PersonalInfo.module.scss
+++ b/components/Cabinet/DashBoard/User/UserInfo/Personal/PersonalInfo/PersonalInfo.module.scss
@@ -18,37 +18,13 @@
   gap: 32px;
   @media all and (width >= $min_tablet) {
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     flex-grow: 1;
     width: 100%;
   }
 }
 
-.name_last_name_wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  width: 100%;
-}
-
-.label {
-  @include fontRegular(14px, 600, 14px);
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-
-.input {
-  @include fontRegular(14px, 600, 14px);
-
-  border: 1px solid $dark_gold_light;
-  border-radius: 8px;
-  padding: 8px 8px 8px 16px;
-  width: 100%;
-  height: 44px;
-  background-color: transparent;
-  outline: none;
-}
 
 //buttons
 .buttons_wrapper {
@@ -77,6 +53,4 @@
   }
 }
 
-.error {
-  border-color: red;
-}
+
