--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,7 +4,7 @@ $main_bg: #101010;
 $main_text_color: #fdfdfd;
 $seconds_text_color: #cfb691;
 $third_text_color: #101010;
-$buttons_color: #cfb691;
+$buttons_color: #cfb691; //dark-gold
 $buttons_hover_color: #fdfdfd;
 $black: #000000;
 $form_placeholder: #ababab;
@@ -12,7 +12,7 @@ $additional_bg: #cfb691;
 $under_photo_gradient: linear-gradient(180deg, #cfb691 -33.5%, rgba(0, 0, 0, 0) 117.06%);
 $dropdown_bg: #1f1f1f;
 $card_bg: #fdfdfd;
-$card_bg_v2: #2e2e2e;
+$card_bg_v2: #2e2e2e; //dark-brown
 $accent_v2: #cfb691;
 $matrix_bg_gradient: linear-gradient(270deg, #cfb691 -135.76%, #000 102.98%);
 $matrix_table_border: #7e7e7e;
