--- a/components/Education/EduPricing/EduPricing.module.scss
+++ b/components/Education/EduPricing/EduPricing.module.scss
@@ -76,8 +76,7 @@
 
 .button {
   display: flex;
-  width: 100%;
-  max-width: 195px;
+  width: 195px;
   height: 51px;
   justify-content: center;
   align-items: center;
@@ -85,6 +84,7 @@
   border-radius: 30px;
   @include fontRegular(16px, 600, 16px, $third_text_color);
   transition: all 0.3s ease;
+  flex-shrink: 0;
   &:hover,
   &:focus {
     scale: 1.05;
