--- a/components/Cabinet/DashBoard/User/CoursesDetails/CourseInfo/Consultation/ConsultingHeader/AgreementInfo/AgreementInfo.module.scss
+++ b/components/Cabinet/DashBoard/User/CoursesDetails/CourseInfo/Consultation/ConsultingHeader/AgreementInfo/AgreementInfo.module.scss
@@ -10,9 +10,18 @@
     height: 32px;
     fill: currentColor;
   }
+  @media all and (width >= $min_tablet) {
+    gap: 24px;
+  }
 }
 
 .text {
   @include fontRegular(14px, 400, 20.02px, $seconds_text_color);
   max-width: calc(100% - 40px);
+  @media all and (width >= $min_tablet) {
+    max-width: 100%;
+  }
+  @media all and (width >= $min_desktop) {
+    font-size: 18px;
+  }
 }
