--- a/components/Cabinet/DashBoard/User/CoursesDetails/CourseInfo/Consultation/ConsultingHeader/Greeting/Greeting.module.scss
+++ b/components/Cabinet/DashBoard/User/CoursesDetails/CourseInfo/Consultation/ConsultingHeader/Greeting/Greeting.module.scss
@@ -4,6 +4,10 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  @media all and (width >= $min_desktop) {
+    width: 565px;
+    flex-shrink: 0;
+  }
 }
 
 .title {
@@ -18,9 +22,11 @@
   flex-direction: column;
   gap: 8px;
 }
+
 .text {
   @include fontRegular(14px, 400, 20px);
   @media all and (width >= $min_desktop) {
     font-size: 16px;
+    text-wrap: auto;
   }
 }
