--- a/components/Cabinet/DashBoard/User/CoursesDetails/CourseInfo/Consultation/ConsultingHeader/ConsultingHeader.module.scss
+++ b/components/Cabinet/DashBoard/User/CoursesDetails/CourseInfo/Consultation/ConsultingHeader/ConsultingHeader.module.scss
@@ -16,3 +16,22 @@
     flex-direction: row-reverse;
   }
 }
+
+.link_back {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  @include fontRegular(14px, 600, 19.6px, $buttons_color);
+  margin-bottom: 28px;
+  &:hover {
+    color: $buttons_hover_color;
+  }
+  & > svg {
+    width: 14px;
+    height: 14px;
+  }
+  @media all and (width >= $min_desktop) {
+    font-size: 16px;
+    margin-bottom: 56px;
+  }
+}
