--- a/components/Cabinet/DashBoard/User/CoursesDetails/CourseInfo/SSK/CourseInfoHeader/CourseInfoHeaderButtons/CourseInfoHeaderButtons.module.scss
+++ b/components/Cabinet/DashBoard/User/CoursesDetails/CourseInfo/SSK/CourseInfoHeader/CourseInfoHeaderButtons/CourseInfoHeaderButtons.module.scss
@@ -27,7 +27,7 @@
 .link {
   display: flex;
   align-items: center;
-  justify-content: center;
+
   gap: 12px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: $card_bg_v2;
@@ -37,6 +37,26 @@
   padding: 4px 12px;
   width: 100%;
   @include fontRegular(16px, 400, 16px);
+  transition: all 250ms ease;
+  & > svg {
+    fill: $accent_v2;
+  }
+  @media (hover: hover) {
+    &:is(:hover, :focus) {
+      scale: 1.05;
+    }
+  }
+  @media (hover: none) {
+    &:is(:active, :focus) {
+      scale: 1.05;
+    }
+  }
+  &:disabled {
+    opacity: 0.3;
+    border-color: $dark_gold_dark;
+    background-color: $card_bg_v2;
+    color: $main_text_color;
+  }
   @media all and (width >= $min_tablet) {
     height: 62px;
   }
@@ -44,28 +64,12 @@
   }
 }
 
-.certificate {
-  @include buttonsDefault();
-  width: 100%;
-  height: 52px;
-  border-color: $dark_gold_light;
-  background-color: $accent_v2;
-  gap: 12px;
-  justify-content: flex-start;
-  padding: 4px 12px;
-  @include fontRegular(14px, 600, 16px, $third_text_color);
-  &:disabled {
-    opacity: 0.3;
-    border-color: $dark_gold_dark;
-    background-color: $card_bg_v2;
-    color: $main_text_color;
-  }
+.active {
+  background-color: $buttons_color;
+  border: 1px solid $dark_gold_light;
+  color: $card_bg_v2;
   & > svg {
     fill: currentColor;
   }
-  @media all and (width >= $min_tablet) {
-    height: 62px;
-  }
-  @media all and (width >= $min_desktop) {
-  }
 }
+
