--- a/components/Cabinet/DashBoard/Admin/Main/Education/Lessons/AddLesson/Form/FormParts/ModulePeriod/ModulePeriod.module.scss
+++ b/components/Cabinet/DashBoard/Admin/Main/Education/Lessons/AddLesson/Form/FormParts/ModulePeriod/ModulePeriod.module.scss
@@ -56,14 +56,15 @@
   border: 1px solid $p_separators;
   border-radius: 8px;
   padding: 4px;
+  gap: 8px;
 }
 
 .time_label {
   display: flex;
+  flex-direction: column;
   gap: 8px;
   justify-content: space-evenly;
   flex-grow: 1;
-  align-items: center;
 }
 
 .error {
